--- a/config/crd/bases/edgeautoscaler.polimi.it_communitysettings.yaml
+++ b/config/crd/bases/edgeautoscaler.polimi.it_communitysettings.yaml
@@ -32,6 +32,28 @@ spec:
         metadata:
           type: object
         spec:
+          properties:
+            community-size:
+              format: int64
+              type: integer
+            delay-threshold:
+              format: int32
+              maximum: 100
+              minimum: 0
+              type: integer
+            iterations:
+              default: 20
+              format: int64
+              type: integer
+            probability-threshold:
+              default: 30
+              format: int32
+              maximum: 100
+              minimum: 0
+              type: integer
+          required:
+          - community-size
+          - delay-threshold
           type: object
       required:
       - spec
