--- a/pkg/system-controller/Makefile
+++ b/pkg/system-controller/Makefile
@@ -1,6 +1,7 @@
 BUILD_SETTINGS = CGO_ENABLED=0 GOOS=linux GOARCH=amd64
 IMAGE = system-controller
-IMAGE_VERSION = $(shell git tag --points-at HEAD | sed '/$(IMAGE)\/.*/!s/.*//' | sed 's/\//:/')
+# IMAGE_VERSION = $(shell git tag --points-at HEAD | sed '/$(IMAGE)\/.*/!s/.*//' | sed 's/\//:/')
+IMAGE_VERSION = 0.0.1
 REPO = systemautoscaler
 
 
@@ -26,7 +27,7 @@ coverage: test
 release:
 	@if [ -n "$(IMAGE_VERSION)" ]; then \
 		echo "Building $(IMAGE_VERSION)" ;\
-		docker build -t $(REPO)/$(IMAGE_VERSION) . ;\
+		docker build -t $(REPO)/$(IMAGE):$(IMAGE_VERSION) . ;\
 		docker push $(REPO)/$(IMAGE_VERSION) ;\
 	else \
 		echo "$(IMAGE) unchanged: no version tag on HEAD commit" ;\
