--- a/pkg/system-controller/Makefile
+++ b/pkg/system-controller/Makefile
@@ -1,7 +1,6 @@
 BUILD_SETTINGS = CGO_ENABLED=0 GOOS=linux GOARCH=amd64
 IMAGE = system-controller
-# IMAGE_VERSION = $(shell git tag --points-at HEAD | sed '/$(IMAGE)\/.*/!s/.*//' | sed 's/\//:/')
-IMAGE_VERSION = 0.0.2
+IMAGE_VERSION = $(shell git tag --points-at HEAD | sed '/$(IMAGE)\/.*/!s/.*//' | sed 's/\//:/')
 REPO = systemautoscaler
 
 
