--- a/.github/workflows/base-pipeline.yml
+++ b/.github/workflows/base-pipeline.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
     - main
-    - dev
+    - development
   pull_request:
     branches:
     - main
-    - dev
+    - development
 
 jobs:
 
