Feature: system controller (#1)
* build: update go.mod and go.sum

* feat: update Community Settings CRD apis

* feat: add miscellaneous files for controller development

* feat: implement controller skeleton

* feat: add JSON for SLPA input and output data

* feat: add default values to communitysettings

* feat: add slpa client

* feat: add sync loop for communitysettings

* refactor: change system-controller folder name

* test: add test infrastructure for slpa client

* test: add slpa response parse test

* refactor: add CommunityUpdater to add node labels

* test: add CommunityUpdater testing

* build: add miscellaneous files for development cluster

* refactor: change JSON input parameters

* test: add sync.go test

* refactor: change systemController fields

* feat: change communityconfiguration CRD

* build: fix makefiles

* build: add development cluster configuration

* feat: generate new CRD manifests

* doc: add CRD description

* feat: exclude master from node list

* build: update test files

* refactor: moved labels in a new package

* feat: add fake slpa client

* refactor: change communitygetter to also set the host

* test: add e2e

* feat: add node cleanup on CRD deletion

* fix: change requested in PR

* fix: change dev branch in pipeline

--- a/config/crd/bases/edgeautoscaler.polimi.it_communityschedules.yaml
+++ b/config/crd/bases/edgeautoscaler.polimi.it_communityschedules.yaml
@@ -1,6 +1,6 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
@@ -15,29 +15,30 @@ spec:
     plural: communityschedules
     singular: communityschedule
   scope: Namespaced
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          type: object
-      required:
-      - spec
-      type: object
-  version: v1alpha1
   versions:
   - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: CommunitySchedule wraps the rules to route traffic inside a community
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: CommunityScheduleSpec is the spec for a CommunitySchedule
+            type: object
+        required:
+        - spec
+        type: object
     served: true
     storage: true
 status:
