--- a/pkg/system-controller/Makefile
+++ b/pkg/system-controller/Makefile
@@ -1,5 +1,5 @@
 BUILD_SETTINGS = CGO_ENABLED=0 GOOS=linux GOARCH=amd64
-IMAGE = community-controller
+IMAGE = system-controller
 IMAGE_VERSION = $(shell git tag --points-at HEAD | sed '/$(IMAGE)\/.*/!s/.*//' | sed 's/\//:/')
 REPO = systemautoscaler
 
@@ -15,19 +15,19 @@ fmt:
 	@go fmt ./...
 
 test:
-	@go test -race $(shell go list ./... | grep -v e2e) --coverprofile=coverage.out
+	@go test -race -v $(shell go list ./... | grep -v e2e) --coverprofile=coverage.out
 
-e2e:
-	@go test -race $(shell go list ./... | grep e2e)
+e2e: test
+	@go test -race -v $(shell go list ./... | grep e2e)
 
 coverage: test
 	@go tool cover -func=coverage.out
 
-release:
+release: build
 	@if [ -n "$(IMAGE_VERSION)" ]; then \
 		echo "Building $(IMAGE_VERSION)" ;\
-		docker build -t $(REPO)/$(IMAGE_VERSION) . ;\
-		docker push $(REPO)/$(IMAGE_VERSION) ;\
+		docker build --rm -t $(REPO)/$(IMAGE):$(IMAGE_VERSION) . ;\
+		docker push $(REPO)/$(IMAGE):$(IMAGE_VERSION) ;\
 	else \
 		echo "$(IMAGE) unchanged: no version tag on HEAD commit" ;\
 	fi
