--- a/config/crd/bases/edgeautoscaler.polimi.it_communityconfigurations.yaml
+++ b/config/crd/bases/edgeautoscaler.polimi.it_communityconfigurations.yaml
@@ -14,7 +14,7 @@ spec:
     listKind: CommunityConfigurationList
     plural: communityconfigurations
     singular: communityconfiguration
-  scope: Cluster
+  scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
