--- a/config/crd/bases/edgeautoscaler.polimi.it_communityschedules.yaml
+++ b/config/crd/bases/edgeautoscaler.polimi.it_communityschedules.yaml
@@ -35,6 +35,28 @@ spec:
             type: object
           spec:
             description: CommunityScheduleSpec is the spec for a CommunitySchedule
+            properties:
+              allocations:
+                additionalProperties:
+                  additionalProperties:
+                    type: boolean
+                  type: object
+                type: object
+              routing_rules:
+                additionalProperties:
+                  additionalProperties:
+                    additionalProperties:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    type: object
+                  type: object
+                type: object
+            required:
+            - allocations
+            - routing_rules
             type: object
         required:
         - spec
