feat: partial features

--- a/config/deploy/example-cs.yaml
+++ b/config/deploy/example-cs.yaml
@@ -9,3 +9,5 @@ spec:
   probability-threshold: 20
   iterations: 20
   slpa-service: slpa.default.svc.cluster.local:4567
+status:
+  generated-communities: []
