--- a/config/permissions/community-controller.yaml
+++ b/config/permissions/community-controller.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: system-controller
-  namespace: kube-system
+  name: community-controller
+  namespace: openfaas-fn
 automountServiceAccountToken: false
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: edge-autoscaler:system-controller
+  name: edge-autoscaler:community-controller
 rules:
 - apiGroups: [""]
   resources: ["pods", "services", "nodes"]
@@ -28,13 +28,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: edge-autoscaler:system-controller
+  name: edge-autoscaler:community-controller
 subjects:
 - kind: ServiceAccount
-  name: system-controller
-  namespace: kube-system
+  name: community-controller
+  namespace: openfaas-fn
   apiGroup: ""
 roleRef:
   kind: ClusterRole
-  name: edge-autoscaler:system-controller
+  name: edge-autoscaler:community-controller
   apiGroup: rbac.authorization.k8s.io
