--- a/config/deploy/example-cs.yaml
+++ b/config/deploy/example-cs.yaml
@@ -2,6 +2,7 @@ apiVersion: edgeautoscaler.polimi.it/v1alpha1
 kind: CommunityConfiguration
 metadata:
   name: example-cc
+  namespace: openfaas-fn
 spec:
   community-size: 3
   maximum-delay: 100
