feat: deployment webhook automation

--- a/pkg/function-deployment-webhook/Dockerfile
+++ b/pkg/function-deployment-webhook/Dockerfile
@@ -3,7 +3,7 @@ FROM gcr.io/distroless/static:nonroot
 LABEL name="Function Deployment Webhook"
 
 COPY function-deployment-webhook /usr/local/bin/
-COPY server-cert.pem .
-COPY server-key.pem .
+COPY ./deploy/server-cert.pem .
+COPY ./deploy/server-key.pem .
 
 CMD ["function-deployment-webhook"]
