--- a/config/permissions/community-controller.yaml
+++ b/config/permissions/community-controller.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: community-controller
-  namespace: kube-system
+  namespace: openfaas-fn
 automountServiceAccountToken: false
 ---
 apiVersion: rbac.authorization.k8s.io/v1
