feat: fix namespace for community-controller from openfaas to kube-sys

--- a/config/deploy/system-controller.yaml
+++ b/config/deploy/system-controller.yaml
@@ -19,7 +19,7 @@ spec:
       serviceAccountName: system-controller
       containers:
       - name: system-controller
-        image: systemautoscaler/system-controller:0.0.2
+        image: systemautoscaler/system-controller:dev
         imagePullPolicy: Always
         ports:
         - containerPort: 443
