--- a/pkg/function-deployment-webhook/deploy/deployment.yaml
+++ b/pkg/function-deployment-webhook/deploy/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: openfaas-fn
+  namespace: kube-system
   name: function-deployment-custom-scheduler
 spec:
   selector:
