--- a/config/permissions/community-controller.yaml
+++ b/config/permissions/community-controller.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: community-controller
-  namespace: openfaas-fn
+  namespace: kube-system
 automountServiceAccountToken: false
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -32,7 +32,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: community-controller
-  namespace: openfaas-fn
+  namespace: kube-system
   apiGroup: ""
 roleRef:
   kind: ClusterRole
