--- a/pkg/function-deployment-webhook/deploy/service.yaml
+++ b/pkg/function-deployment-webhook/deploy/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: openfaas-fn
+  namespace: kube-system
   name: function-deployment-custom-scheduler
   labels:
     app: function-deployment-custom-scheduler
