--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ pkg/*/edge-scheduler
 .idea/
 pkg/function-deployment-webhook/deploy/server-key.pem
 pkg/function-deployment-webhook/deploy/server-cert.pem
+pkg/function-deployment-webhook/deploy/admission-registration-subst.yaml
