refactor: moving and refactoring instructions.sh

--- a/config/cluster-conf/kind.conf
+++ b/config/cluster-conf/kind.conf
@@ -10,3 +10,8 @@ nodes:
 - role: worker
 - role: worker
 - role: worker
+- role: worker
+- role: worker
+- role: worker
+- role: worker
+- role: worker
