Feature: webhook automation (#6)
* feat: deployment webhook automation

Co-authored-by: Luca Terracciano <terraccianoluca@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ pkg/*/system-controller
 pkg/*/edge-scheduler
 
 .idea/
+pkg/function-deployment-webhook/deploy/server-key.pem
+pkg/function-deployment-webhook/deploy/server-cert.pem
+pkg/function-deployment-webhook/deploy/admission-registration-subst.yaml
