--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ pkg/function-deployment-webhook/deploy/server-cert.pem
 pkg/dispatcher/dispatcher
 pkg/dispatcher/pkg/controller/loadbalancer-controller.go
 pkg/function-deployment-webhook/deploy/admission-registration-subst.yaml
+pkg/function-deployment-webhook/deploy/admission-registration-subst.yaml
