--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,11 @@ vendor/
 pkg/*/community-controller
 pkg/*/system-controller
 pkg/*/edge-scheduler
+pkg/*/function-deployment-webhook
 
 .idea/
 pkg/function-deployment-webhook/deploy/server-key.pem
 pkg/function-deployment-webhook/deploy/server-cert.pem
+pkg/dispatcher/dispatcher
+pkg/dispatcher/pkg/controller/loadbalancer-controller.go
 pkg/function-deployment-webhook/deploy/admission-registration-subst.yaml
