--- a/config/deploy/dispatcher.yaml
+++ b/config/deploy/dispatcher.yaml
@@ -24,14 +24,9 @@ spec:
 #          effect: NoSchedule
       containers:
         - name: dispatcher
-          image: systemautoscaler/dispatcher:dev
+          image: systemautoscaler/dispatcher:dev.1
           imagePullPolicy: Always
           resources:
-            limits:
-              memory: 200Mi
-            requests:
-              cpu: 100m
-              memory: 200Mi
           env:
           - name: NODE_NAME
             valueFrom:
