--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Create k8s Kind Cluster
         uses: helm/kind-action@v1.1.0
         with:
-          node_image: "systemautoscaler/kindest-node:latest"
+# node_image: "systemautoscaler/kindest-node:latest"
           config: "./config/cluster-conf/kind.conf"
 
       - name: Deploy CRDs, RBAC in kind and run tests
