--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Go 1.15
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.15
+          go-version: 1.15
 
 #      - name: Cache Go modules
 #        uses: actions/cache@v2
