--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -34,6 +34,10 @@ jobs:
       - name: Get dependencies
         run: |
           go get -v -t -d ./...
+          
+      - name: Get vendors
+        run: |
+          go mod vendor
 
       - uses: actions/checkout@v2
 
