fix:  update dispatcher service port

--- a/config/deploy/dispatcher.yaml
+++ b/config/deploy/dispatcher.yaml
@@ -44,7 +44,8 @@ metadata:
     app: dispatcher
 spec:
   ports:
-    - port: 8080
+    - port: 80
+      targetPort: 8080
   selector:
     app: dispatcher
 
