--- a/deploy/config/deploy/dispatcher.yaml
+++ b/deploy/config/deploy/dispatcher.yaml
@@ -37,3 +37,16 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: spec.nodeName
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: dispatcher
+  labels:
+    app: dispatcher
+spec:
+  ports:
+    - port: 80
+      targetPort: 8080
+  selector:
+    app: dispatcher
