--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Go 1.15
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.15
+          go-version: 1.15
 
 #      - name: Cache Go modules
 #        uses: actions/cache@v2
@@ -34,11 +34,15 @@ jobs:
       - name: Get dependencies
         run: |
           go get -v -t -d ./...
+          
+      - name: Get vendors
+        run: |
+          go mod vendor
 
       - uses: actions/checkout@v2
 
       - name: Create k8s Kind Cluster
-        uses: helm/kind-action@v1.1.0
+        uses: helm/kind-action@v1.2.0
         with:
           node_image: "systemautoscaler/kindest-node:latest"
           config: "./config/cluster-conf/kind.conf"
