--- a/example/sock-shop/queue-master-fn.yaml
+++ b/example/sock-shop/queue-master-fn.yaml
@@ -1,16 +1,16 @@
 apiVersion: openfaas.com/v1
 kind: Function
 metadata:
-  name: shipping
+  name: queue-master
   namespace: openfaas-fn
 spec:
-  name: shipping
-  image: weaveworksdemos/shipping:0.4.8
+  name: queue-master
+  image: weaveworksdemos/queue-master:0.3.1
   environment:
     JAVA_OPTS: "-Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false -Dserver.port=8080"
   limits:
-    cpu: "1000m"
+    cpu: "300m"
     memory: "1024Mi"
   requests:
-    cpu: "1000m"
+    cpu: "300m"
     memory: "1024Mi"
