--- a/example/sock-shop/user-fn.yaml
+++ b/example/sock-shop/user-fn.yaml
@@ -1,16 +1,16 @@
 apiVersion: openfaas.com/v1
 kind: Function
 metadata:
-  name: carts
+  name: user
   namespace: openfaas-fn
 spec:
-  name: carts
-  image: weaveworksdemos/carts:0.4.8
+  name: user
+  image: systemautoscaler/user:dev
   environment:
     JAVA_OPTS: "-Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false -Dserver.port=8080"
   limits:
-    cpu: "1000m"
+    cpu: "50m"
     memory: "1024Mi"
   requests:
-    cpu: "1000m"
+    cpu: "50m"
     memory: "1024Mi"
