Feat: dynamic delays (#16)
refactor: renamed bench files
feat: add sla manifests
fix: update sock-shop resources and sla
feat: adding function management
feat: add dispatcher label on worker nodes
feat: cpu monitoring skeleton
feat: add delay management and better node memory computation
refactor: removed duplicated code from delay client and persistor

Co-authored-by: Luca Terracciano <terraccianoluca@gmail.com>

--- a/example/sock-shop/carts-fn.yaml
+++ b/example/sock-shop/carts-fn.yaml
@@ -4,6 +4,10 @@ metadata:
   name: carts
   namespace: openfaas-fn
 spec:
+  labels:
+    com.openfaas.scale.max: "0"
+    com.openfaas.scale.min: "0"
+    com.openfaas.scale.zero: "true"
   name: carts
   image: weaveworksdemos/carts:0.4.8
   environment:
