--- a/example/sock-shop/orders-fn.yaml
+++ b/example/sock-shop/orders-fn.yaml
@@ -4,6 +4,10 @@ metadata:
   name: orders
   namespace: openfaas-fn
 spec:
+  labels:
+    com.openfaas.scale.max: "0"
+    com.openfaas.scale.min: "0"
+    com.openfaas.scale.zero: "true"
   name: orders
   image: systemautoscaler/orders:dev
   environment:
