--- a/example/sock-shop/user-fn.yaml
+++ b/example/sock-shop/user-fn.yaml
@@ -4,6 +4,10 @@ metadata:
   name: user
   namespace: openfaas-fn
 spec:
+  labels:
+    com.openfaas.scale.max: "0"
+    com.openfaas.scale.min: "0"
+    com.openfaas.scale.zero: "true"
   name: user
   image: systemautoscaler/user:dev
   environment:
