--- a/example/sock-shop/payment-fn.yaml
+++ b/example/sock-shop/payment-fn.yaml
@@ -4,6 +4,10 @@ metadata:
   name: payment
   namespace: openfaas-fn
 spec:
+  labels:
+    com.openfaas.scale.max: "0"
+    com.openfaas.scale.min: "0"
+    com.openfaas.scale.zero: "true"
   name: payment
   image: systemautoscaler/payment:dev
   environment:
