--- a/config/deploy/monitoring.yaml
+++ b/config/deploy/monitoring.yaml
@@ -59,3 +59,13 @@ spec:
         - name: monitoring
           image: systemautoscaler/system-autoscaler-monitoring:dev.1
           imagePullPolicy: Always
+        - name: cpu-monitoring
+          image: systemautoscaler/cpu-monitoring:dev
+          imagePullPolicy: Always
+          env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            value: "default"
