--- a/config/deploy/cpu-monitoring.yaml
+++ b/config/deploy/cpu-monitoring.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: cpu-monitoring
-  namespace: default
+  namespace: kube-system
   labels:
     app: cpu-monitoring
 spec:
@@ -15,8 +15,6 @@ spec:
         app: cpu-monitoring
     spec:
       automountServiceAccountToken: true
-      nodeSelector:
-        kubernetes.io/kind: worker
       serviceAccountName: cpu-monitoring
       containers:
         - name: cpu-monitoring
@@ -27,3 +25,34 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: spec.nodeName
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cpu-monitoring
+  namespace: kube-system
+rules:
+- apiGroups: ["*"]
+  resources: ["*"]
+  verbs: ["*"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cpu-monitoring
+roleRef:
+  kind: ClusterRole
+  name: cpu-monitoring
+  apiGroup: "rbac.authorization.k8s.io"
+subjects:
+- kind: ServiceAccount
+  name: cpu-monitoring
+  namespace: kube-system
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: cpu-monitoring
+  namespace: kube-system
+automountServiceAccountToken: false
