--- a/config/crd/bases/edgeautoscaler.polimi.it_communityschedules.yaml
+++ b/config/crd/bases/edgeautoscaler.polimi.it_communityschedules.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.6.2
   creationTimestamp: null
   name: communityschedules.edgeautoscaler.polimi.it
 spec:
@@ -38,13 +38,31 @@ spec:
             properties:
               algorithm-service:
                 type: string
-              allocations:
+              cpu-allocations:
                 additionalProperties:
                   additionalProperties:
                     type: boolean
                   type: object
                 type: object
-              routing-rules:
+              cpu-routing-rules:
+                additionalProperties:
+                  additionalProperties:
+                    additionalProperties:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    type: object
+                  type: object
+                type: object
+              gpu-allocations:
+                additionalProperties:
+                  additionalProperties:
+                    type: boolean
+                  type: object
+                type: object
+              gpu-routing-rules:
                 additionalProperties:
                   additionalProperties:
                     additionalProperties:
@@ -58,8 +76,10 @@ spec:
                 type: object
             required:
             - algorithm-service
-            - allocations
-            - routing-rules
+            - cpu-allocations
+            - cpu-routing-rules
+            - gpu-allocations
+            - gpu-routing-rules
             type: object
         required:
         - spec
