fix: change build image

--- a/pkg/knative-cpu-monitoring/Dockerfile
+++ b/pkg/knative-cpu-monitoring/Dockerfile
@@ -2,6 +2,6 @@ FROM alpine:3.14.0
 
 LABEL name="knative-cpu-monitoring"
 
-COPY cpu-monitoring /usr/local/bin/
+COPY knative-cpu-monitoring /usr/local/bin/
 
 CMD ["knative-cpu-monitoring"]
