--- a/example/sock-shop-2/queue-master-fn.yaml
+++ b/example/sock-shop-2/queue-master-fn.yaml
@@ -10,7 +10,7 @@ spec:
     com.openfaas.scale.zero: "true"
   annotations:
     com.openfaas.health.http.path: "/health"
-    com.openfaas.health.http.initialDelay: "5m"
+    com.openfaas.health.http.initialDelay: "30s"
   name: queue-master
   image: weaveworksdemos/queue-master:0.3.1
   environment:
