--- a/example/sock-shop-2/user-fn-login.yaml
+++ b/example/sock-shop-2/user-fn-login.yaml
@@ -10,11 +10,9 @@ spec:
     com.openfaas.scale.zero: "true"
   annotations:
     com.openfaas.health.http.path: "/health"
-    com.openfaas.health.http.initialDelay: "5m"
+    com.openfaas.health.http.initialDelay: "30s"
   name: user-login
   image: systemautoscaler/user:dev
-  environment:
-    JAVA_OPTS: "-Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false -Dserver.port=8080"
   limits:
     cpu: "50m"
     memory: "500Mi"
