--- a/example/sock-shop/carts-db-dep.yaml
+++ b/example/sock-shop/carts-db-dep.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: carts-db
-        image: mongo
+        image: systemautoscaler/mongo-carts:dev
         ports:
         - name: mongo
           containerPort: 27017
